Lien du bouton activé

--- a/Showroom.html
+++ b/Showroom.html
@@ -26,7 +26,7 @@
     <p>Avec plus de 70  formateurs et plus de 10000 personnes formées par an ,
         nous offrons la chance d'être un(e) acteur/trice dans le secteur de la formation.</p>
        <p>Que vous voulez <strong>enseigner</strong> ou <strong>étudier</strong>, Notre plateforme <strong>"WEBVP"</strong> à votre disposition. </p>
-       <a href="#" class="button">Voir nos Formations</a>
+       <a href="PageFormation.htm" class="button">Voir nos Formations</a>
      </section>
      <section id="Info">
      <h1>MFC, Formation pour tous</h1>
