--- a/PageAccueil.htm
+++ b/PageAccueil.htm
@@ -2,12 +2,11 @@
 <html>
     <div id="main">
         <head>
-            <title>WebVp</title>
+            <title>Page d'accueil WEBVP</title>
             <meta charset="utf-8"/>
             <link rel="stylesheet" type="text/css" href="css/style.css">
         </head>
         <body>
-            
             <nav>
                 <select class="select" onchange="location = this.options[this.selectIndex].value" >
                     <option value="">Accueil</option>
