--- a/Showroom.html
+++ b/Showroom.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="/css/Show.css">
   <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <title>WebVP</title>
+  <title>Bienvenue sur WEBVP</title>
  </head>
  <body>
      <!--La navigation qui est collée en de la page. elle est constituée de 4 éléments: Accueil, A propos, Insc/Co,Contact.
@@ -15,8 +15,8 @@
         <ul>
             <li><a href="#Accueil">Accueil</a></li>
             <li><a href="#Info">à Propos</a></li>
-           <!--<li><a>>Inscription/Connexion</a></li>-->
             <li><a href="#Contact">Contact</a></li>
+            <li><a>Inscription/Connexion</a></li>
         </ul>
     </nav>
     </div>
